--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     </head>
     <body>
       <h2>TODAY will show you some healty recipes that i tried and that i think they're delicious! </h2>
-         <img src ="Images/pancake.jpg.jpeg" style ="width: 400px; height: 500px" alt ="healty pancakes" />
+      <img src ="Images/pancake.jpg.jpeg" style ="width: 400px; height: 430px" alt ="healty pancakes" />
+         <h3><strong>THERE ARE SOME OF MY FAVOURITE EASY RECIPES WITH JUST A FEW INGREDIENTS :</strong></h3>
+         <div>
+             <ul>
+                 <li><a href = "./oatspan.html"><em>Oats pancake</em></li>
+                <li><a href = "./mocha.html"></a><em>Healty mocha</em></li>
+             </ul>
+         </div>
     </body>
 </html>
