--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
          <h3><strong>THERE ARE SOME OF MY FAVOURITE EASY RECIPES WITH JUST A FEW INGREDIENTS :</strong></h3>
          <div>
              <ul>
-                 <li><a href = "./oatspan.html"><em>Oats pancake</em></li>
-                <li><a href = "./mocha.html"></a><em>Healty mocha</em></li>
+                <li><a href = "./oatspan.html"><em>Oats pancake</em></li>
+                <li><a href = "./Mocha.html"><em>Healty mocha</em></a></li>
+                <li><a href = "./tompasta.html"><em>Tomato Pasta</em></a></li>
              </ul>
          </div>
     </body>
